src/main/java/com/example/shortudy/global/error/exception/UserNotFoundException.java
package com.example.shortudy.global.error.exception;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}

